--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,21 @@
 {
     "manifest_version": 3,
-    "type": "extension",
-    "name": "插件模板",
-    "slug": "plugin_template",
-    "description": "LiteLoaderQQNT的插件模板",
+    "type": "theme",
+    "name": "Transitio",
+    "slug": "transitio",
+    "description": "为 QQNT 添加过渡动画",
     "version": "0.1.0",
     "thumbnail": "./icon.png",
     "author": {
-        "name": "沫烬染",
-        "link": "https://github.com/mo-jinran"
+        "name": "PRO-2684",
+        "link": "https://github.com/PRO-2684"
     },
     "repository": {
-        "repo": "LiteLoaderQQNT-Plugin-Template",
+        "repo": "PRO-2684/transitio",
         "branch": "main",
         "use_release": {
             "tag": "latest",
-            "name": "Plugin-Template.zip"
+            "name": "transitio-release.zip"
         }
     },
     "platform": [
@@ -24,8 +24,6 @@
         "darwin"
     ],
     "injects": {
-        "renderer": "./src/renderer.js",
-        "main": "./src/main.js",
-        "preload": "./src/preload.js"
+        "renderer": "./renderer.js"
     }
 }
