手动重载样式

--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
     "type": "theme",
     "name": "Transitio",
     "slug": "transitio",
-    "description": "为 QQNT 添加自定义的 CSS 外观更改，内置过渡动画和图片查看器的增强",
-    "version": "0.2.1",
+    "description": "自定义 CSS 加载器，内置过渡动画和图片查看器的增强",
+    "version": "0.2.2-dev",
     "thumbnail": "./icon.png",
     "author": {
         "name": "PRO-2684",
