--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
     "name": "Transitio",
     "slug": "transitio",
     "description": "自定义 CSS 加载器，内置过渡动画和图片查看器的增强",
-    "version": "0.2.2-dev",
+    "version": "0.2.2",
     "thumbnail": "./icon.png",
     "author": {
         "name": "PRO-2684",
