去除内置样式的逻辑

--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
     "type": "theme",
     "name": "Transitio",
     "slug": "transitio",
-    "description": "自定义 CSS 加载器，内置过渡动画和图片查看器的增强",
-    "version": "0.2.4",
+    "description": "自定义 CSS 片段加载器",
+    "version": "0.2.5",
     "thumbnail": "./icon.png",
     "author": {
         "name": "PRO-2684",
