--- a/manifest.json
+++ b/manifest.json
@@ -4,8 +4,8 @@
     "name": "Transitio",
     "slug": "transitio",
     "description": "自定义 CSS 片段加载器",
-    "version": "0.2.8",
-    "thumbnail": "./icon.png",
+    "version": "0.2.9",
+    "thumbnail": "./icon.svg",
     "author": {
         "name": "PRO-2684",
         "link": "https://github.com/PRO-2684"
