--- a/manifest.json
+++ b/manifest.json
@@ -21,8 +21,8 @@
         }
     },
     "store": {
-        "repo": "Night-stars-1/LiteLoaderQQNT-Plugin-Plugin-Store",
-        "branch": "master",
+        "repo": "PRO-2684/transitio",
+        "branch": "main",
         "save_folder": "./styles/"
     },
     "platform": [
