--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,14 +13,18 @@ jobs:
     steps:
       - name: "Checkout Repository"
         uses: "actions/checkout@v4"
+        with:
+          fetch-depth: 2 # Ensure we can get the previous version
 
       - name: "Read versions from manifest"
         id: read-versions
         run: |
-          sed -n 's/.*"version": "\(.*\)",/\1/p' manifest.json >> "$GITHUB_OUTPUT"
-          echo "Version: ${{ steps.read-versions.outputs.version }}"
-          git show HEAD^:manifest.json | sed -n 's/.*"version": "\(.*\)",/\1/p' >> "$GITHUB_OUTPUT"
-          echo "Previous version: ${{ steps.read-versions.outputs.previous-version }}"
+          version=$(sed -n 's/.*"version": "\(.*\)",/\1/p' manifest.json)
+          echo "version=$version" >> "$GITHUB_OUTPUT"
+          echo "Version: $version"
+          previous_version=$(git show HEAD^:manifest.json | sed -n 's/.*"version": "\(.*\)",/\1/p')
+          echo "previous-version=previous_version$" >> "$GITHUB_OUTPUT"
+          echo "Previous version: $previous_version"
 
       - name: "Zip release files" # Only if the version has been updated
         if: ${{ steps.read-versions.outputs.version != steps.read-versions.outputs.previous-version }}
