Change log color; add emoji to description; add thumb

--- a/manifest.json
+++ b/manifest.json
@@ -3,9 +3,10 @@
     "type": "theme",
     "name": "Transitio",
     "slug": "transitio",
-    "description": "自定义 CSS 片段加载器",
+    "description": "🪄 自定义 CSS 片段加载器",
     "version": "1.2.0",
     "icon": "./icons/icon.svg",
+    "thumb": "./icons/thumb.svg",
     "authors": [
         {
             "name": "PRO-2684",
