--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,5 @@
 {
+    "$schema": "./manifest_schema.json",
     "manifest_version": 4,
     "type": "theme",
     "name": "Transitio",
@@ -20,11 +21,6 @@
             "tag": "v1.3.4",
             "file": "transitio-release.zip"
         }
-    },
-    "store": {
-        "repo": "PRO-2684/transitio",
-        "branch": "main",
-        "save_folder": "./styles/"
     },
     "platform": [
         "win32",
