--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/PRO-2684/transitio/issues"
   },
-  "homepage": "https://github.com/PRO-2684/transitio#readme"
+  "homepage": "https://github.com/PRO-2684/transitio#readme",
+  "dependencies": {
+    "stylus": "^0.63.0",
+    "usercss-meta": "^0.12.0"
+  }
 }
