Bug fixes; Gather supported extensions; CSS -> userstyles

--- a/manifest.json
+++ b/manifest.json
@@ -31,5 +31,9 @@
         "renderer": "./renderer.js",
         "main": "./main.js",
         "preload": "./preload.js"
-    }
+    },
+    "supported_extensions": [
+        ".css",
+        ".styl"
+    ]
 }
