--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "transitio",
   "version": "1.4.0",
-  "description": "Add custom CSS snippets for QQNT",
+  "description": "Load custom UserStyles for QQNT",
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -14,7 +14,9 @@
   "keywords": [
     "css",
     "liteloaderqqnt",
-    "llqqnt"
+    "llqqnt",
+    "stylus",
+    "userstyle"
   ],
   "author": "PRO-2684",
   "license": "GPL-3.0-or-later",
