--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
   "dependencies": {
     "stylus": "^0.63.0",
     "usercss-meta": "^0.12.0"
+  },
+  "devDependencies": {
+    "@qwqnt/types": "github:QwQ-002/types"
   }
 }
