--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "$schema": "./manifest_schema.json",
+    "$schema": "./manifest.schema.json",
     "manifest_version": 4,
     "type": "theme",
     "name": "Transitio",
