chore: Better schema

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,7 @@
             "fileMatch": [
                 "/userstyles.json"
             ],
-            "url": "/userstyles_schema.json"
+            "url": "/userstyles.schema.json"
         }
     ]
 }
