--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "$schema": "./manifest.schema.json",
+    "$schema": "https://raw.githubusercontent.com/LiteLoaderQQNT/Plugin-Template/refs/heads/main/manifest-en.schema.json",
     "manifest_version": 4,
     "type": "theme",
     "name": "Transitio",
