--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,7 @@
     "$schema": "https://raw.githubusercontent.com/LiteLoaderQQNT/Plugin-Template/refs/heads/main/manifest-en.schema.json",
     "manifest_version": 4,
     "type": "theme",
+    "esm": true,
     "name": "Transitio",
     "slug": "transitio",
     "description": "🪄 自定义用户样式加载器",
